revised theme-infos

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- * Theme Name: My Timber Starter Theme
+ * Theme Name: Timber Starter Theme
  * Description: Starter Theme to use with Timber
  * Author: Johannes Ludescher
 */
