resaved without BOM

--- a/src/views/single-password.twig
+++ b/src/views/single-password.twig
@@ -1,4 +1,4 @@
-﻿{% extends "base.twig" %}
+{% extends "base.twig" %}
 
 {% block content %}
 	<form class="password-form" action="{{site.site_url}}/wp-login.php?action=postpass" method="post">
@@ -7,3 +7,4 @@
 		<input class="password-btn" type="submit" name="Submit" value="Submit" />
 	</form>
 {% endblock %}
+
