--- a/src/views/single.twig
+++ b/src/views/single.twig
@@ -1,4 +1,4 @@
-﻿{% extends "base.twig" %}
+{% extends "base.twig" %}
 
 {% block content %}
 	<div class="content-wrapper">
@@ -37,3 +37,4 @@
 		</article>
 	</div><!-- /content-wrapper -->
 {% endblock %}
+
