--- a/templates/base.twig
+++ b/templates/base.twig
@@ -20,7 +20,6 @@
 				</div>
 			{% endblock %}
 		</header>
-
 		<section id="content" role="main" class="content-wrapper">
 			{% if title %}<h1>{{title}}</h1>{% endif %}
 			<div class="wrapper {{sidebar_class}}">
@@ -39,6 +38,13 @@
 			<footer id="footer">
 				{% include 'footer.twig' %}
 			</footer>
+
+			{{ encore_entry_script_tags('app') }}
+
+			<!-- Renders app.js & a webpack runtime.js file
+			<script src="/build/runtime.js"></script>
+			<script src="/build/app.js"></script> -->
+
 			{{ function('wp_footer') }}
 		{% endblock %}
 	</body>
