--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -15,3 +15,8 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     {{function('wp_head')}}
 
+    {# 'app' must match the first argument to addEntry() in webpack.config.js #}
+    {{ encore_entry_link_tags('app') }}
+
+    <!-- Renders a link tag (if your module requires any CSS)
+    <link rel="stylesheet" href="/build/app.css"> -->
